--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -1,6 +1,6 @@
 .header {
   filter: drop-shadow(0 2px 6px rgba(0, 0, 0, 0.07));
-  background: white;
+  background: var(--background);
   padding: 16px 32px 16px 32px;
   display: flex;
   align-items: center;
