--- a/app/poems/poems.css
+++ b/app/poems/poems.css
@@ -1,5 +1,22 @@
+.poems-page-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: fit-content;
+  overflow: visible;
+}
+
 .poems-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: fit-content;
   gap: 24px;
+  padding: 0 16px 0 16px;
+  overflow: visible;
+  height: fit-content;
+}
+
+.toolbar {
   padding: 16px;
 }
