--- a/app/poem/[id]/poem.css
+++ b/app/poem/[id]/poem.css
@@ -1,31 +1,27 @@
+.poem-page-container {
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .poem-container {
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.flower {
-  background: url("/poem-rose.png") no-repeat;
-  background-size: contain;
-  background-position: -20%;
-  position: sticky;
-  bottom: 0;
-  left: 0;
-  height: 60%;
-  z-index: 1;
+  justify-items: center;
+  padding-top: 32px;
+  padding-bottom: 48px;
 }
 
 .poem-container h1 {
   font-size: 40px;
   color: var(--dusty-rose);
   margin-bottom: 8px;
-  /* position: sticky; */
   background-color: var(--background);
-  /* top: 0px; */
-  padding-top: 32px;
-  /* z-index: 3; */
   width: 100%;
+  height: 100%;
 }
 
 .poem-page-verse {
@@ -36,4 +32,16 @@
   font-size: 20px;
   z-index: 2;
   overflow: visible;
+}
+
+.flower {
+  background: url("/poem-rose.png") no-repeat;
+  background-size: contain;
+  background-position: -100px 80px;
+  position: sticky;
+  bottom: 0;
+  left: 0;
+  height: 400px;
+  z-index: 1;
+  overflow: hidden;
 }
