--- a/app/poems/poems.css
+++ b/app/poems/poems.css
@@ -12,11 +12,30 @@
   justify-content: center;
   width: fit-content;
   gap: 24px;
-  padding: 0 16px 0 16px;
+  padding: 16px 16px 48px 16px;
   overflow: visible;
   height: fit-content;
 }
 
 .toolbar {
   padding: 16px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background-color: var(--background);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.07);
+  /* filter: drop-shadow(0 2px 6px rgba(0, 0, 0, 0.07)); */
+}
+
+@media screen and (max-width: 768px) {
+  .searchbar {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .toolbar {
+    padding-left: 48px;
+  }
 }
