--- a/app/poem/[id]/poem.css
+++ b/app/poem/[id]/poem.css
@@ -11,8 +11,7 @@
   flex-direction: column;
   align-items: center;
   justify-items: center;
-  padding-top: 32px;
-  padding-bottom: 48px;
+  padding: 32px 12px 48px 12px;
 }
 
 .poem-container h1 {
