--- a/app/components/nav-button/nav-button.css
+++ b/app/components/nav-button/nav-button.css
@@ -31,3 +31,9 @@
   background: var(--dusty-rose);
   transition: width 0.4s;
 }
+
+@media screen and (max-width: 768px) {
+  .nav-button {
+    font-size: 24px;
+  }
+}
