--- a/app/about/about.css
+++ b/app/about/about.css
@@ -3,7 +3,8 @@
   background-size: contain;
   background-position: -160px 0;
   position: sticky;
-  height: 80dvh;
+  min-height: 80vh;
+  min-height: 80dvh;
   bottom: 0;
   left: 0;
   z-index: -1;
@@ -37,7 +38,8 @@
   .author {
     background-size: cover;
     background-position: 10% 0;
-    height: 68dvh;
+    min-height: 68vh;
+    min-height: 68dvh;
   }
 
   .button-bar {
