--- a/app/components/mobile-menu/mobile-menu.css
+++ b/app/components/mobile-menu/mobile-menu.css
@@ -3,7 +3,8 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100dvh;
+  min-height: 100vh;
+  min-height: 100dvh;
   background-color: var(--background);
   z-index: 1000;
   display: flex;
@@ -13,7 +14,7 @@
 }
 
 .menu-options {
-  height: calc(100vh - 176px);
+  height: calc(100dvh - 176px);
   display: flex;
   flex-direction: column;
   align-items: center;
